--- a/miniprogram/pages/home/index.wxss
+++ b/miniprogram/pages/home/index.wxss
@@ -240,3 +240,41 @@
   padding-left: 10px;
   padding-right: 10px;
 }
+
+.bottom-container {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-top: 30rpx;
+}
+
+.computerBtn {
+  width: 100rpx;
+}
+
+.computerBtn,.computerBtn2 {
+  height: 100rpx;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-left: 40rpx;
+  
+}
+.cImage-circle {
+  height: 45rpx;
+  width: 45rpx;
+}
+
+.cImage-circle {
+  border-radius: 45px;
+}
+.cText {
+  color: #333;
+  font-size: 24rpx;
+}
+
+.computerBtn2 {
+  width: 120rpx;
+}
